# localmind

./: .gitignore  README.md  pyproject.toml
src/localmind/: __init__.py  agent.py  cli.py  config.py  model.py  prompts.py  response_cleanup.py  routing.py  search.py  search_context.py  tool_parser.py  tools.py
