[project]
name = "localmind"
version = "0.1.0"
description = "A small local agent for useful everyday reasoning."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "accelerate>=1.0.0",
    "pydantic>=2.8.0",
    "rich>=13.7.0",
    "safetensors>=0.4.5",
    "torch>=2.4.0",
    "transformers>=4.53.0",
    "typer>=0.12.0",
]

[project.scripts]
localmind = "localmind.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
